# tasty-discover

./: .cursorrules  .gitignore  AI_GUIDELINES.md  CHANGELOG.md  CODING_STYLE.md  README.md  cabal.project  package.yaml  stack.yaml  t all  tasty-discover.cabal  test_platform.hs
.github/workflows/: downstream-aws-arn.yml  haskell.yml  stack.yml  stack.yml.disabled
app/: Main.hs
executable/: Main.hs
src/Test/Tasty/: Discover.hs
src/Test/Tasty/Discover/: TastyInfo.hs  Version.hs
src/Test/Tasty/Discover/Internal/: Config.hs  Driver.hs  Generator.hs  Unsafe.hs
test/: ConfigTest.hs  DiscoverTest.hs  Driver.hs
test-no-main/: Main.hs  Tests.hs
test-no-main/Tests/: Simple.hs
test/BackupFiles/: ValidTest.hs  ValidTest.hs.bak  ValidTest.hs.orig
test/ModulesGlob/: Output.hs  TwoTest.hs
test/ModulesGlob/Sub/: OneTest.hs
